--- a/style.css
+++ b/style.css
@@ -54,52 +54,7 @@ h6 {
   font-size: inherit;
 }
 
-.btn-blue {
-  display: inline-block;
-  background: #3040c4;
-  color: #fff;
-  text-align: center;
-  border-radius: 2px;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.btn-white {
-  display: inline-block;
-  background: #fff;
-  color: #3040c4;
-  text-align: center;
-  border-radius: 2px;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.btn-simple {
-  font-weight: 400;
-  font-size: 18px;
-  color: #2b292d;
-  background: #ffffff;
-  border: 1px solid rgba(43, 41, 45, 0.2);
-  border-radius: 2px;
-}
-
-html,
-body {
-  font-family: "Work Sans", sans-serif;
-  font-size: 24px;
-  color: #2b292d;
-  font-weight: 400;
-  min-height: 100%;
-  overflow-x: hidden;
-}
-
-[class*=__container] {
-  max-width: 1170px;
-  margin: 0 auto;
-  padding: 0px 15px;
-}
-
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .header {
     background: #f3c6bd;
   }
@@ -109,7 +64,12 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
+  .header__container {
+    background: #f3c6bd;
+  }
+}
+@media (min-width: 1400px) {
   .header__container {
     padding-top: 39px;
     background: #f3c6bd;
@@ -127,7 +87,7 @@ body {
   width: 48px;
   height: 48px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .header__logo img {
     width: 60px;
     height: 60px;
@@ -146,7 +106,7 @@ body {
   line-height: 118%;
   font-weight: 400;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .header__sublabel {
     display: block;
   }
@@ -159,7 +119,7 @@ body {
   min-height: 64px;
   border-left: 1px solid rgba(0, 0, 0, 0.15);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .header__hamburger-container {
     display: none;
   }
@@ -170,7 +130,7 @@ body {
 .header__menu {
   display: none;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .header__menu {
     display: block;
   }
@@ -211,7 +171,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.31px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .headline__title {
     padding-top: 82px;
     font-size: 80px;
@@ -227,7 +187,7 @@ body {
   min-width: 290px;
   max-width: 460px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .headline__text {
     padding-top: 48px;
     z-index: 1;
@@ -238,7 +198,7 @@ body {
   margin-top: 30px;
   margin-bottom: 33px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .headline__buttons {
     padding-bottom: 126px;
     margin-bottom: 0px;
@@ -254,7 +214,7 @@ body {
 .headline__button:not(:last-child) {
   margin-bottom: 15px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .headline__button {
     display: inline-block;
     padding: 0px 28.5px;
@@ -271,7 +231,7 @@ body {
 .headline__img-wrapper {
   padding-bottom: 36px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .headline__img-wrapper {
     padding-bottom: 0px;
     position: absolute;
@@ -290,7 +250,7 @@ body {
   padding-top: 46px;
   padding-bottom: 11px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .about__container {
     display: flex;
     justify-content: space-between;
@@ -311,7 +271,7 @@ body {
   font-weight: 400;
   margin-bottom: 37px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .about__text {
     margin-bottom: 0;
   }
@@ -322,7 +282,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   padding: 0px 0px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .customers__container {
     grid-template: 1fr/repeat(6, 1fr);
   }
@@ -350,7 +310,7 @@ body {
 .customers__item:nth-child(5) {
   border-bottom: none;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .customers__item {
     border-right: none;
     border-bottom: none;
@@ -361,7 +321,7 @@ body {
   max-width: 50%;
   filter: brightness(0);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .customers__img {
     max-width: 100%;
   }
@@ -372,7 +332,7 @@ body {
   margin-top: 90px;
   padding-bottom: 110px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .features {
     display: block;
   }
@@ -459,7 +419,7 @@ body {
   max-width: 998px;
   margin: 0 auto;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .features-mobile {
     display: none;
   }
@@ -508,13 +468,13 @@ body {
   background: #fcf0e3;
   padding: 50px 0px 48px 0px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__container {
     display: flex;
     margin-bottom: 68px;
   }
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__img-container {
     margin: 92px 190px 0 74px;
   }
@@ -522,7 +482,7 @@ body {
 .inbox__img-subtitle {
   display: none;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__img-subtitle {
     display: block;
     color: rgba(43, 41, 45, 0.6);
@@ -534,7 +494,7 @@ body {
 .inbox__img {
   max-width: 100%;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__img {
     max-width: none;
   }
@@ -546,7 +506,7 @@ body {
   font-weight: 700;
   line-height: 132%;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__suptitle {
     margin-top: 65px;
     line-height: 152%;
@@ -559,7 +519,7 @@ body {
   line-height: 85%;
   letter-spacing: -0.36px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__title {
     line-height: 100%;
     font-size: 56px;
@@ -571,7 +531,7 @@ body {
   margin-top: 24px;
   line-height: 121%;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .inbox__text {
     line-height: 142%;
     max-width: 460px;
@@ -586,7 +546,7 @@ body {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.00001) 100%), #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .review {
     min-width: 519px;
     margin-top: 44px;
@@ -623,13 +583,13 @@ body {
 .communication__block-top {
   padding-top: 50px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .communication__block-top {
     padding-top: 110px;
   }
 }
 
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-top {
     display: flex;
     justify-content: space-between;
@@ -648,7 +608,7 @@ body {
   line-height: 40px;
   letter-spacing: -0.357143px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-top__title {
     margin-top: 24px;
     max-width: 420px;
@@ -662,7 +622,7 @@ body {
   font-size: 24px;
   line-height: 34px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-top__text {
     margin-top: 30px;
     max-width: 461px;
@@ -676,7 +636,7 @@ body {
 .block-top__img-container {
   margin-top: 40px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-top__img-container {
     padding-right: 63px;
   }
@@ -696,7 +656,7 @@ body {
 .block-bottom {
   padding-bottom: 17px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-bottom {
     display: flex;
     justify-content: space-between;
@@ -708,7 +668,7 @@ body {
   background-color: rgba(0, 0, 0, 0.141);
   margin-bottom: 33px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-bottom__line {
     position: absolute;
   }
@@ -716,7 +676,7 @@ body {
 .block-bottom__item {
   margin-bottom: 32px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .block-bottom__item {
     padding-top: 41px;
     max-width: 360px;
@@ -742,7 +702,7 @@ body {
   background: rgba(0, 162, 198, 0.07);
   padding-bottom: 50px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience {
     padding-bottom: 110px;
   }
@@ -751,7 +711,7 @@ body {
   padding: 50px 0 40px 0;
   font-weight: 700;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__content {
     padding: 108px 0 111px 0;
     display: flex;
@@ -774,7 +734,7 @@ body {
   max-width: 555px;
   margin: 0 auto;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__title {
     font-size: 56px;
     line-height: 56px;
@@ -790,7 +750,7 @@ body {
   max-width: 555px;
   margin: 0 auto;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__text {
     padding-bottom: 34px;
   }
@@ -798,7 +758,7 @@ body {
 .audience__buttons {
   display: block;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__buttons {
     display: flex;
   }
@@ -813,7 +773,7 @@ body {
 .audience__button:last-child {
   margin-bottom: 40px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__button {
     padding: 0px 28px;
     margin: 0 10px 0 0;
@@ -825,7 +785,7 @@ body {
 .audience__button_black {
   color: #000;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__categories {
     display: flex;
     justify-content: space-between;
@@ -839,7 +799,7 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   text-align: center;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .audience__item {
     min-width: 262px;
     min-height: 300px;
@@ -868,7 +828,7 @@ body {
 .feedback__container {
   position: relative;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .feedback__container {
     text-align: center;
   }
@@ -880,7 +840,7 @@ body {
   line-height: 125%;
   color: #3142c6;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .feedback__title {
     padding: 60px 0 28px 0;
   }
@@ -890,7 +850,7 @@ body {
   line-height: 142%;
   padding-bottom: 32px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .feedback__text {
     max-width: 750px;
     margin: 0 auto;
@@ -917,7 +877,7 @@ body {
   width: 100%;
   padding-bottom: 40px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .feedback__dotts {
     padding-bottom: 66px;
   }
@@ -937,7 +897,7 @@ body {
   justify-content: center;
   padding-bottom: 50px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .feedback__img-container {
     position: absolute;
     right: -100px;
@@ -948,7 +908,7 @@ body {
 .hiring {
   padding-bottom: 35px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .hiring {
     padding-bottom: 95px;
   }
@@ -963,7 +923,7 @@ body {
   line-height: 40px;
   letter-spacing: -0.357143px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .hiring__title {
     padding-top: 106px;
     font-size: 56px;
@@ -976,7 +936,7 @@ body {
   font-size: 24px;
   line-height: 34px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .hiring__text {
     padding-top: 20px;
     max-width: 555px;
@@ -990,7 +950,7 @@ body {
   font-size: 18px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .hiring__button {
     display: inline-block;
     padding: 0px 29px;
@@ -1005,7 +965,7 @@ body {
   justify-content: space-between;
   margin-bottom: 15px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy {
     max-width: 770px;
     margin: 0 auto 15px auto;
@@ -1024,7 +984,7 @@ body {
   align-items: flex-start;
   padding: 19px 20px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy__info {
     flex-direction: row;
     align-items: center;
@@ -1039,7 +999,7 @@ body {
   line-height: 28px;
   max-width: 199px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy__position {
     max-width: 100%;
   }
@@ -1050,7 +1010,7 @@ body {
   line-height: 22px;
   color: rgba(43, 41, 45, 0.6);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy__duty {
     margin-top: 0px;
     font-size: 18px;
@@ -1063,7 +1023,7 @@ body {
   min-width: 50px;
   background: #d5d4d5;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy__img-container {
     background: transparent;
     margin-left: 43px;
@@ -1072,12 +1032,12 @@ body {
 .vacancy__img_arrow-white {
   display: none;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy__img_arrow-white {
     display: block;
   }
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .vacancy__img_arrow-grey {
     display: none;
   }
@@ -1087,7 +1047,7 @@ body {
   background: #f4f5f7;
   padding: 50px 0px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order {
     padding: 73px 0px;
   }
@@ -1097,7 +1057,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__container {
     flex-direction: row;
     align-items: flex-start;
@@ -1106,7 +1066,7 @@ body {
 .order__img-container {
   padding-bottom: 40px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__img-container {
     padding: 0px 121px 0px 105px;
   }
@@ -1121,7 +1081,7 @@ body {
   text-align: center;
   letter-spacing: -0.25px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__title {
     text-align: left;
     padding-top: 51px;
@@ -1133,7 +1093,7 @@ body {
   line-height: 32px;
   padding: 18px 0px 81px 0px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__text {
     max-width: 555px;
     padding: 0px 0px 26px 0px;
@@ -1142,7 +1102,7 @@ body {
 .order__buttons {
   width: 100%;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__buttons {
     display: flex;
   }
@@ -1153,7 +1113,7 @@ body {
   line-height: 48px;
   text-align: center;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__button {
     width: 160px;
   }
@@ -1164,7 +1124,7 @@ body {
   line-height: 48px;
   text-align: center;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .order__button-input {
     width: 385px;
     text-align: left;
@@ -1186,7 +1146,7 @@ body {
   padding-top: 40px;
   padding-bottom: 22px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__container {
     display: flex;
     padding-top: 44px;
@@ -1200,12 +1160,12 @@ body {
   color: rgba(43, 41, 45, 0.6);
   padding-top: 26px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__description {
     display: block;
   }
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__top {
     margin-right: 165px;
   }
@@ -1213,7 +1173,7 @@ body {
 .footer__bottom-menu {
   padding-top: 30px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__bottom-menu {
     display: flex;
     width: 100%;
@@ -1234,7 +1194,7 @@ body {
   padding-top: 31px;
   padding-bottom: 40px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__store {
     text-align: left;
     padding-top: 25px;
@@ -1247,7 +1207,7 @@ body {
   margin: 0 auto;
   background: rgb(227, 227, 227);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__line {
     display: block;
   }
@@ -1258,13 +1218,13 @@ body {
   margin: 0 auto;
   background: rgb(227, 227, 227);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .footer__line-top {
     display: none;
   }
 }
 
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .logo {
     display: flex;
     align-items: center;
@@ -1273,7 +1233,7 @@ body {
 .logo__img-container {
   text-align: center;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .logo__img-container {
     margin-right: 15px;
   }
@@ -1282,7 +1242,7 @@ body {
   width: 60px;
   height: 60px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .logo__titles {
     display: flex;
     flex-direction: column;
@@ -1295,7 +1255,7 @@ body {
   text-align: center;
   line-height: 25px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .logo__title {
     padding-top: 0px;
     text-align: left;
@@ -1308,13 +1268,13 @@ body {
   text-align: center;
   color: rgba(43, 41, 45, 0.6);
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .logo__subtitle {
     text-align: left;
   }
 }
 
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .additional-navigation {
     display: flex;
     padding-bottom: 0px;
@@ -1323,7 +1283,7 @@ body {
 .additional-navigation__block {
   padding-top: 30px;
 }
-@media (min-width: 998px) {
+@media (min-width: 1400px) {
   .additional-navigation__block {
     padding-top: 10px;
     margin-right: 80px;
@@ -1343,6 +1303,51 @@ body {
 
 .social-links__img {
   margin-right: 20px;
+}
+
+.btn-white {
+  display: inline-block;
+  background: #fff;
+  color: #3040c4;
+  text-align: center;
+  border-radius: 2px;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.btn-simple {
+  font-weight: 400;
+  font-size: 18px;
+  color: #2b292d;
+  background: #ffffff;
+  border: 1px solid rgba(43, 41, 45, 0.2);
+  border-radius: 2px;
+}
+
+.btn-blue {
+  display: inline-block;
+  background: #3040c4;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+html,
+body {
+  font-family: "Work Sans", sans-serif;
+  font-size: 24px;
+  color: #2b292d;
+  font-weight: 400;
+  min-height: 100%;
+  overflow-x: hidden;
+}
+
+[class*=__container] {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0px 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
