--- a/styles/about.scss
+++ b/styles/about.scss
@@ -4,7 +4,7 @@
   &__container {
     padding-top: 46px;
     padding-bottom: 11px;
-    @media (min-width: 998px) {
+    @include for-large {
       display: flex;
       justify-content: space-between;
       padding-top: 75px;
@@ -25,7 +25,7 @@
   &__text {
     font-weight: 400;
     margin-bottom: 37px;
-    @media (min-width: 998px) {
+    @include for-large {
       margin-bottom: 0;
     }
   }
