--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -1,14 +1,14 @@
 .audience {
   background: rgba(0, 162, 198, 0.07);
   padding-bottom: 50px;
-  @media (min-width: 998px) {
+  @include for-large {
     padding-bottom: 110px;
   }
 
   &__content {
     padding: 50px 0 40px 0;
     font-weight: 700;
-    @media (min-width: 998px) {
+    @include for-large {
       padding: 108px 0 111px 0;
       display: flex;
       flex-direction: column;
@@ -31,7 +31,7 @@
     padding-bottom: 18px;
     max-width: 555px;
     margin: 0 auto;
-    @media (min-width: 998px) {
+    @include for-large {
       font-size: 56px;
       line-height: 56px;
       letter-spacing: -0.5px;
@@ -46,14 +46,14 @@
     padding-bottom: 30px;
     max-width: 555px;
     margin: 0 auto;
-    @media (min-width: 998px) {
+    @include for-large {
       padding-bottom: 34px;
     }
   }
 
   &__buttons {
     display: block;
-    @media (min-width: 998px) {
+    @include for-large {
       display: flex;
     }
   }
@@ -68,7 +68,7 @@
     &:last-child {
       margin-bottom: 40px;
     }
-    @media (min-width: 998px) {
+    @include for-large {
       padding: 0px 28px;
       margin: 0 10px 0 0;
       &:last-child {
@@ -82,7 +82,7 @@
   }
 
   &__categories {
-    @media (min-width: 998px) {
+    @include for-large {
       display: flex;
       justify-content: space-between;
       min-width: 262px;
@@ -96,7 +96,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
       inset 0px 1px 0px rgba(255, 255, 255, 0.1);
     text-align: center;
-    @media (min-width: 998px) {
+    @include for-large {
       min-width: 262px;
       min-height: 300px;
     }
