--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -1,14 +1,14 @@
 .communication {
   &__block-top {
     padding-top: 50px;
-    @media (min-width: 998px) {
+    @include for-large {
       padding-top: 110px;
     }
   }
 }
 
 .block-top {
-  @media (min-width: 998px) {
+  @include for-large {
     display: flex;
     justify-content: space-between;
   }
@@ -28,7 +28,7 @@
     font-size: 40px;
     line-height: 40px;
     letter-spacing: -0.357143px;
-    @media (min-width: 998px) {
+    @include for-large {
       margin-top: 24px;
       max-width: 420px;
       font-size: 56px;
@@ -41,7 +41,7 @@
     margin-top: 18px;
     font-size: 24px;
     line-height: 34px;
-    @media (min-width: 998px) {
+    @include for-large {
       margin-top: 30px;
       max-width: 461px;
     }
@@ -55,7 +55,7 @@
 
   &__img-container {
     margin-top: 40px;
-    @media (min-width: 998px) {
+    @include for-large {
       padding-right: 63px;
     }
   }
@@ -75,7 +75,7 @@
 }
 .block-bottom {
   padding-bottom: 17px;
-  @media (min-width: 998px) {
+  @include for-large {
     display: flex;
     justify-content: space-between;
   }
@@ -85,14 +85,14 @@
     height: 1px;
     background-color: rgba(0, 0, 0, 0.141);
     margin-bottom: 33px;
-    @media (min-width: 998px) {
+    @include for-large {
       position: absolute;
     }
   }
 
   &__item {
     margin-bottom: 32px;
-    @media (min-width: 998px) {
+    @include for-large {
       padding-top: 41px;
       max-width: 360px;
     }
