--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 0px 0px;
-    @media (min-width: 998px) {
+    @include for-large {
       grid-template: 1fr / repeat(6, 1fr);
     }
   }
@@ -30,7 +30,7 @@
     &:nth-child(5) {
       border-bottom: none;
     }
-    @media (min-width: 998px) {
+    @include for-large {
       border-right: none;
       border-bottom: none;
       padding: 25px 0px;
@@ -40,7 +40,7 @@
   &__img {
     max-width: 50%;
     filter: brightness(0);
-    @media (min-width: 998px) {
+    @include for-large {
       max-width: 100%;
     }
   }
