--- a/styles/hiring.scss
+++ b/styles/hiring.scss
@@ -1,6 +1,6 @@
 .hiring {
   padding-bottom: 35px;
-  @media (min-width: 998px) {
+  @include for-large {
     padding-bottom: 95px;
   }
 
@@ -14,7 +14,7 @@
     font-size: 40px;
     line-height: 40px;
     letter-spacing: -0.357143px;
-    @media (min-width: 998px) {
+    @include for-large {
       padding-top: 106px;
       font-size: 56px;
       line-height: 56px;
@@ -26,7 +26,7 @@
     padding-top: 18px;
     font-size: 24px;
     line-height: 34px;
-    @media (min-width: 998px) {
+    @include for-large {
       padding-top: 20px;
       max-width: 555px;
       margin: 0 auto;
@@ -40,7 +40,7 @@
     font-size: 18px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
       inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-    @media (min-width: 998px) {
+    @include for-large {
       display: inline-block;
       padding: 0px 29px;
       margin-bottom: 110px;
@@ -53,7 +53,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
-  @media (min-width: 998px) {
+  @include for-large {
     max-width: 770px;
     margin: 0 auto 15px auto;
     &:first-child {
@@ -70,7 +70,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 19px 20px;
-    @media (min-width: 998px) {
+    @include for-large {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
@@ -84,7 +84,7 @@
     font-size: 22px;
     line-height: 28px;
     max-width: 199px;
-    @media (min-width: 998px) {
+    @include for-large {
       max-width: 100%;
     }
   }
@@ -94,7 +94,7 @@
     font-size: 16px;
     line-height: 22px;
     color: rgba(43, 41, 45, 0.6);
-    @media (min-width: 998px) {
+    @include for-large {
       margin-top: 0px;
       font-size: 18px;
     }
@@ -106,7 +106,7 @@
     align-items: center;
     min-width: 50px;
     background: #d5d4d5;
-    @media (min-width: 998px) {
+    @include for-large {
       background: transparent;
       margin-left: 43px;
     }
@@ -115,12 +115,12 @@
   &__img {
     &_arrow-white {
       display: none;
-      @media (min-width: 998px) {
+      @include for-large {
         display: block;
       }
     }
     &_arrow-grey {
-      @media (min-width: 998px) {
+      @include for-large {
         display: none;
       }
     }
