--- a/styles/inbox.scss
+++ b/styles/inbox.scss
@@ -3,20 +3,20 @@
   padding: 50px 0px 48px 0px;
 
   &__container {
-    @media (min-width: 998px) {
+    @include for-large {
       display: flex;
       margin-bottom: 68px;
     }
   }
 
   &__img-container {
-    @media (min-width: 998px) {
+    @include for-large {
       margin: 92px 190px 0 74px;
     }
   }
   &__img-subtitle {
     display: none;
-    @media (min-width: 998px) {
+    @include for-large {
       display: block;
       color: rgba(43, 41, 45, 0.6);
       font-size: 14px;
@@ -27,7 +27,7 @@
 
   &__img {
     max-width: 100%;
-    @media (min-width: 998px) {
+    @include for-large {
       max-width: none;
     }
   }
@@ -38,7 +38,7 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 132%;
-    @media (min-width: 998px) {
+    @include for-large {
       margin-top: 65px;
       line-height: 152%;
     }
@@ -50,7 +50,7 @@
     font-size: 40px;
     line-height: 85%;
     letter-spacing: -0.36px;
-    @media (min-width: 998px) {
+    @include for-large {
       line-height: 100%;
       font-size: 56px;
       letter-spacing: -0.5px;
@@ -61,7 +61,7 @@
   &__text {
     margin-top: 24px;
     line-height: 121%;
-    @media (min-width: 998px) {
+    @include for-large {
       line-height: 142%;
       max-width: 460px;
       margin-top: 30px;
@@ -72,16 +72,12 @@
   margin-top: 68px;
   padding: 30px 20px 28px;
   border-bottom: 4px solid #0185d0;
-  background: linear-gradient(
-      180deg,
-      rgba(255, 255, 255, 0.05) 0%,
-      rgba(255, 255, 255, 1e-5) 100%
-    ),
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-5) 100%),
     #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
     inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 
-  @media (min-width: 998px) {
+  @include for-large {
     min-width: 519px;
     margin-top: 44px;
   }
