--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900');
 @import 'reset.scss';
+@import 'breakpoints.scss';
 @import 'variables.scss';
+@import 'header.scss';
+@import 'headline.scss';
+@import 'about.scss';
+@import 'customers.scss';
+@import 'features.scss';
+@import 'features-mobile.scss';
+@import 'inbox.scss';
+@import 'communication.scss';
+@import 'audience.scss';
+@import 'feedback.scss';
+@import 'hiring.scss';
+@import 'order.scss';
+@import 'footer.scss';
+@import 'common.scss';
 
 html,
 body {
@@ -17,17 +32,3 @@ body {
   margin: 0 auto;
   padding: 0px 15px;
 }
-
-@import 'header.scss';
-@import 'headline.scss';
-@import 'about.scss';
-@import 'customers.scss';
-@import 'features.scss';
-@import 'features-mobile.scss';
-@import 'inbox.scss';
-@import 'communication.scss';
-@import 'audience.scss';
-@import 'feedback.scss';
-@import 'hiring.scss';
-@import 'order.scss';
-@import 'footer.scss';
