--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,30 +1,2 @@
 $mainColor: #2b292d;
-
-.btn-blue {
-  display: inline-block;
-  background: #3040c4;
-  color: #fff;
-  text-align: center;
-  border-radius: 2px;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.btn-white {
-  display: inline-block;
-  background: #fff;
-  color: #3040c4;
-  text-align: center;
-  border-radius: 2px;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.btn-simple {
-  font-weight: 400;
-  font-size: 18px;
-  color: #2b292d;
-  background: #ffffff;
-  border: 1px solid rgba(43, 41, 45, 0.2);
-  border-radius: 2px;
-}
+$lg: 1400px;
