--- a/style.css
+++ b/style.css
@@ -1344,7 +1344,7 @@ body {
   overflow-x: hidden;
 }
 
-[class*=__container] {
+.container {
   max-width: 1170px;
   margin: 0 auto;
   padding: 0px 15px;
