--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,7 +27,7 @@ body {
   overflow-x: hidden;
 }
 
-[class*='__container'] {
+.container {
   max-width: 1170px;
   margin: 0 auto;
   padding: 0px 15px;
