--- a/styles/order.scss
+++ b/styles/order.scss
@@ -58,6 +58,7 @@
 
   &__button {
     display: block;
+    width: 100%;
     margin-bottom: 12px;
     line-height: 48px;
     text-align: center;
@@ -68,6 +69,7 @@
 
   &__button-input {
     display: block;
+
     margin-bottom: 12px;
     line-height: 48px;
     text-align: center;
