--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -19,26 +19,43 @@
     border-right: 1px solid rgba(227, 227, 227, 1);
     &:last-child {
       border-right: none;
-      border-bottom: none;
+      img {
+        max-width: 85%;
+      }
     }
+    &:nth-child(2) {
+      img {
+        max-width: 80%;
+      }
+    }
+
     &:nth-child(3) {
       border-right: none;
     }
     &:nth-child(4) {
-      border-bottom: none;
+      img {
+        max-width: 80%;
+      }
     }
     &:nth-child(5) {
-      border-bottom: none;
+      img {
+        max-width: 60%;
+      }
+    }
+    &:first-child {
+      img {
+        max-width: 80%;
+      }
     }
     @include for-large {
       border-right: none;
       border-bottom: none;
       padding: 25px 0px;
+      max-width: 100%;
     }
   }
 
   &__img {
-    max-width: 50%;
     filter: brightness(0);
     @include for-large {
       max-width: 100%;
