--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -26,12 +26,14 @@
   }
 
   &__bottom-menu {
-    padding-top: 30px;
+    padding-top: 20px;
     @include for-large {
       display: flex;
       width: 100%;
       justify-content: space-between;
       align-items: center;
+      min-height: 50px;
+      padding-top: 0px;
     }
   }
 
@@ -42,6 +44,9 @@
     padding-bottom: 30px;
     a {
       margin-right: 16px;
+    }
+    @include for-large {
+      padding-bottom: 0px;
     }
   }
 
@@ -152,7 +157,10 @@
   }
 }
 .social-links {
-  padding-bottom: 30px;
+  padding-top: 5px;
+  @include for-large {
+    transform: translate(0px, 5px);
+  }
   &__img {
     margin-right: 20px;
   }
