--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -1,6 +1,6 @@
 .headline {
+  transform: translate(0, -1px);
   background: #f3c6bd;
-  border-top: 1px solid #f3c6bd;
 
   &__container {
     position: relative;
